--- a/Movie Finder/Base.lproj/Main.storyboard
+++ b/Movie Finder/Base.lproj/Main.storyboard
@@ -22,6 +22,9 @@
                                         <rect key="frame" x="10" y="16" width="294" height="18.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                        <connections>
+                                            <action selector="textFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="HRu-LM-KTI"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gNB-zT-zAw">
                                         <rect key="frame" x="314" y="12" width="30" height="26"/>
@@ -56,49 +59,64 @@
                                 </constraints>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NOZ-SU-Jr2">
-                                <rect key="frame" x="30" y="213" width="354" height="344"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vhY-ZK-lte">
+                                <rect key="frame" x="60" y="213" width="294" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="i97-u9-cVs"/>
+                                </constraints>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchCell" id="P2R-Oo-Hfq" customClass="SearchTableViewCell" customModule="Movie_Finder" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="354" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyCell" id="quR-72-Dhu" customClass="HistoryTableViewCell" customModule="Movie_Finder" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="294" height="50.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="P2R-Oo-Hfq" id="c5b-zR-BKm">
-                                            <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="quR-72-Dhu" id="j4H-mz-61F">
+                                            <rect key="frame" x="0.0" y="0.0" width="294" height="50.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this is a history search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3z-iI-ZSz">
-                                                    <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9JT-3V-lkM">
+                                                    <rect key="frame" x="10" y="0.0" width="284" height="50.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="ESr-Ci-yfq"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="T3z-iI-ZSz" secondAttribute="bottom" id="FRO-RK-V5Z"/>
-                                                <constraint firstAttribute="trailing" secondItem="T3z-iI-ZSz" secondAttribute="trailing" id="aLk-GF-kBa"/>
-                                                <constraint firstItem="T3z-iI-ZSz" firstAttribute="leading" secondItem="c5b-zR-BKm" secondAttribute="leading" id="j41-1U-7dX"/>
-                                                <constraint firstItem="T3z-iI-ZSz" firstAttribute="top" secondItem="c5b-zR-BKm" secondAttribute="top" id="oAL-xy-fFw"/>
+                                                <constraint firstItem="9JT-3V-lkM" firstAttribute="leading" secondItem="j4H-mz-61F" secondAttribute="leading" constant="10" id="5Wd-R2-fQu"/>
+                                                <constraint firstAttribute="bottom" secondItem="9JT-3V-lkM" secondAttribute="bottom" id="MQY-KP-OEd"/>
+                                                <constraint firstAttribute="trailing" secondItem="9JT-3V-lkM" secondAttribute="trailing" id="Y8U-oc-FO0"/>
+                                                <constraint firstItem="9JT-3V-lkM" firstAttribute="top" secondItem="j4H-mz-61F" secondAttribute="top" id="opl-4z-NEJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.69480415239726023" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="searchLabel" destination="T3z-iI-ZSz" id="YMb-yr-iBw"/>
+                                            <outlet property="searchHistoryLabel" destination="9JT-3V-lkM" id="WKH-wl-jmW"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="mfG-9T-PM9"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="MdA-NH-PxZ"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7eU-LX-ze2" secondAttribute="trailing" constant="30" id="529-JS-a1z"/>
+                            <constraint firstItem="vhY-ZK-lte" firstAttribute="width" secondItem="vdV-c3-Hre" secondAttribute="width" id="7WB-Sq-UAg"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="8Tn-Rn-0Gg"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8wA-aS-Upt"/>
-                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="top" secondItem="7eU-LX-ze2" secondAttribute="bottom" constant="5" id="PYI-1p-YE1"/>
-                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="width" secondItem="7eU-LX-ze2" secondAttribute="width" id="SWp-w4-bU7"/>
-                            <constraint firstItem="NOZ-SU-Jr2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ckS-lj-h05"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dNA-q0-k89" secondAttribute="bottom" constant="100" id="l9U-K6-BFx"/>
                             <constraint firstItem="7eU-LX-ze2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="nkO-kw-5SQ"/>
                             <constraint firstItem="dNA-q0-k89" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o4c-sh-NtI"/>
+                            <constraint firstItem="vhY-ZK-lte" firstAttribute="top" secondItem="7eU-LX-ze2" secondAttribute="bottom" constant="5" id="tPt-t3-jEk"/>
+                            <constraint firstItem="vhY-ZK-lte" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xqX-Ug-PQh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -106,7 +124,8 @@
                     <connections>
                         <outlet property="searchFieldView" destination="7eU-LX-ze2" id="ELa-ek-zNy"/>
                         <outlet property="searchTextField" destination="vdV-c3-Hre" id="phP-RC-guP"/>
-                        <outlet property="tableView" destination="NOZ-SU-Jr2" id="B25-MW-aAt"/>
+                        <outlet property="tableView" destination="vhY-ZK-lte" id="TCg-bS-w4o"/>
+                        <outlet property="tableViewHeight" destination="i97-u9-cVs" id="pgp-wG-5xc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
